--- a/public/index.html
+++ b/public/index.html
@@ -150,16 +150,16 @@
                                         <li class="dropdown"><a href="index.html">Home</a>
                                             <ul>
                                                 <li><a href="index.html">Corporate Business</a></li>
-                                                <li><a href="index-2.html">Consulting</a></li>
+                                                <!-- <li><a href="index-2.html">Consulting</a></li>
                                                 <li><a href="index-3.html">Finance</a></li>
                                                 <li><a href="index-4.html">Law Firm</a></li>
-                                                <li><a href="index-5.html">Visa Consulting</a></li>
+                                                <li><a href="index-5.html">Visa Consulting</a></li> -->
                                                 <li><a href="index-6.html">Digital Agency</a></li>
-                                                <li><a href="index-7.html">Data Hosting</a></li>
-                                                <li><a href="index-8.html">App Landing</a></li>
+                                                <!-- <li><a href="index-7.html">Data Hosting</a></li> -->
+                                                <!-- <li><a href="index-8.html">App Landing</a></li> -->
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="index.html">Pages</a>
+                                        <li class="dropdown"><a href="about.html">About</a>
                                             <div class="megamenu">
                                                 <div class="row clearfix">
                                                     <div class="col-lg-3 column">
@@ -167,22 +167,22 @@
                                                             <li>
                                                                 <h6>About Pages</h6>
                                                             </li>
-                                                            <li><a href="about.html">About Classic</a></li>
+                                                            <!-- <li><a href="about.html">About Classic</a></li> -->
                                                             <li><a href="about-2.html">About Creative</a></li>
-                                                            <li><a href="about-3.html">About Modern</a></li>
+                                                            <!-- <li><a href="about-3.html">About Modern</a></li>
                                                             <li><a href="about-4.html">About Simple</a></li>
-                                                            <li><a href="about-5.html">About Minimal</a></li>
-                                                            <li>
+                                                            <li><a href="about-5.html">About Minimal</a></li> -->
+                                                            <!-- <li>
                                                                 <h6>Testimonial Pages</h6>
                                                             </li>
                                                             <li><a href="testimonial-1.html">Testimonial Page 1</a></li>
                                                             <li><a href="testimonial-2.html">Testimonial Page 2</a></li>
                                                             <li><a href="testimonial-3.html">Testimonial Page 3</a></li>
                                                             <li><a href="testimonial-4.html">Testimonial Page 4</a></li>
-                                                            <li><a href="testimonial-5.html">Testimonial Page 5</a></li>
+                                                            <li><a href="testimonial-5.html">Testimonial Page 5</a></li> -->
                                                         </ul>
                                                     </div>
-                                                    <div class="col-lg-3 column">
+                                                    <!-- <div class="col-lg-3 column">
                                                         <ul>
                                                             <li>
                                                                 <h6>Service Pages</h6>
@@ -194,19 +194,19 @@
                                                             <li><a href="service-5.html">Service Style 5</a></li>
                                                             <li><a href="service-details.html">Service Details 1</a></li>
                                                             <li><a href="service-details-2.html">Service Details 2</a></li>
-                                                            <li><a href="service-details-3.html">Service Details 3</a></li>
-                                                            <li>
+                                                            <li><a href="service-details-3.html">Service Details 3</a></li> 
+                                                             <li>
                                                                 <h6>Other Pages</h6>
                                                             </li>
                                                             <li><a href="career.html">Career</a></li>
                                                             <li><a href="process.html">Our Process</a></li>
-                                                            <li><a href="faq.html">FAQ 1</a></li>
-                                                            <li><a href="faq-2.html">FAQ 2</a></li>
-                                                            <li><a href="faq-3.html">FAQ 3</a></li>
+                                                            <li><a href=q.html">FAQ 1</a></li>
+                                                            <li><a href="faq-2.html"fa">FAQ 2</a></li>
+                                                            <li><a href="faq-3.html">FAQ 3</a></li> 
                                                         </ul>
-                                                    </div>
+                                                    </div> -->
                                                     <div class="col-lg-3 column">
-                                                        <ul>
+                                                        <!-- <ul>
                                                             <li>
                                                                 <h6>Team Pages</h6>
                                                             </li>
@@ -227,9 +227,9 @@
                                                             <li><a href="registration.html">Registration</a></li>
                                                             <li><a href="error.html">404 Error</a></li>
                                                             <li><a href="coming-soon.html">Coming Soon</a></li>
-                                                        </ul>
+                                                        </ul> -->
                                                     </div>
-                                                    <div class="col-lg-3 column">
+                                                    <!-- <div class="col-lg-3 column">
                                                         <ul>
                                                             <li>
                                                                 <h6>Pricing Table</h6>
@@ -248,30 +248,33 @@
                                                             <li><a href="contact-4.html">Contact Page 4</a></li>
                                                             <li><a href="contact-5.html">Contact Page 5</a></li>
                                                         </ul>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </li>
+                                        
                                         <li class="dropdown"><a href="index.html">Project</a>
                                             <ul>
                                                 <li><a href="project.html">Project Style 1</a></li>
-                                                <li><a href="project-2.html">Project Style 2</a></li>
+                                                <!-- <li><a href="project-2.html">Project Style 2</a></li>
                                                 <li><a href="project-3.html">Project Style 3</a></li>
                                                 <li><a href="project-4.html">Project Style 4</a></li>
                                                 <li><a href="project-5.html">Project Style 5</a></li>
-                                                <li><a href="project-6.html">Project Style 6</a></li>
+                                                <li><a href="project-6.html">Project Style 6</a></li> -->
                                                 <li class="dropdown"><a href="index.html">Project Details</a>
                                                     <ul>
                                                         <li><a href="project-details.html">Project Details 1</a></li>
-                                                        <li><a href="project-details-2.html">Project Details 2</a></li>
+                                                        <!-- <li><a href="project-details-2.html">Project Details 2</a></li>
                                                         <li><a href="project-details-3.html">Project Details 3</a></li>
                                                         <li><a href="project-details-4.html">Project Details 4</a></li>
-                                                        <li><a href="project-details-5.html">Project Details 5</a></li>
+                                                        <li><a href="project-details-5.html">Project Details 5</a></li> -->
                                                     </ul>
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="index.html">Shop</a>
+                                        <li><a href="service.html">Service</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                        <!-- <li class="dropdown"><a href="index.html">Shop</a>
                                             <ul>
                                                 <li><a href="shop.html">Shop 1</a></li>
                                                 <li><a href="shop-2.html">Shop 2</a></li>
@@ -280,8 +283,8 @@
                                                 <li><a href="cart.html">Cart Page</a></li>
                                                 <li><a href="checkout.html">Checkout</a></li>
                                             </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="about-1.html">Elements</a>
+                                        </li> -->
+                                        <!-- <li class="dropdown"><a href="about-1.html">Elements</a>
                                             <div class="megamenu">
                                                 <div class="row clearfix">
                                                     <div class="col-lg-3 column">
@@ -376,8 +379,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </li>
-                                        <li class="dropdown"><a href="index.html">Blog</a>
+                                        </li> -->
+                                        <!-- <li class="dropdown"><a href="index.html">Blog</a>
                                             <ul>
                                                 <li><a href="blog.html">Blog Standard 1</a></li>
                                                 <li><a href="blog-2.html">Blog Standard 2</a></li>
@@ -393,7 +396,7 @@
                                                     </ul>
                                                 </li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </nav>
