--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
                                                 <li><a href="index-3.html">Finance</a></li>
                                                 <li><a href="index-4.html">Law Firm</a></li>
                                                 <li><a href="index-5.html">Visa Consulting</a></li> -->
-                                                <li><a href="index-6.html">Digital Agency</a></li>
+                                                <!-- <li><a href="index-6.html">Digital Agency</a></li> -->
                                                 <!-- <li><a href="index-7.html">Data Hosting</a></li> -->
                                                 <!-- <li><a href="index-8.html">App Landing</a></li> -->
                                             </ul>
@@ -475,7 +475,7 @@
                     <div class="auto-container">
                         <div class="content-box p_relative d_block z_5">
                             <h2 class="p_relative d_iblock fw_bold fs_80 lh_70 mb_25"><span class="slider-text-anim">Make Your Business with</span><br /> <span class="slider-text-anim">Unique Ideas.</span></h2>
-                            <p class="d_block fs_18 mb_45">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br />deserunt mollit anim id est laborum.</p>
+                            <!-- <p class="d_block fs_18 mb_45">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br />deserunt mollit anim id est laborum.</p> -->
                             <div class="btn-box clearfix">
                                 <a href="index.html" class="theme-btn theme-btn-two"><span data-text="Get Started">Get Started</span></a>
                             </div>
@@ -492,8 +492,8 @@
                     <div class="image-layer p_absolute" style="background-image:url(assets/images/banner/banner-2.jpg)"></div>
                     <div class="auto-container">
                         <div class="content-box p_relative d_block z_5">
-                            <h2 class="p_relative d_iblock fw_bold fs_80 lh_70 mb_25"><span class="slider-text-anim">Make Your Business with</span><br /> <span class="slider-text-anim">Unique Ideas.</span></h2>
-                            <p class="d_block fs_18 mb_45">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br />deserunt mollit anim id est laborum.</p>
+                            <h2 class="p_relative d_iblock fw_bold fs_80 lh_70 mb_25"><span class="slider-text-anim">Empower your business with  </span><br /> <span class="slider-text-anim">software solutions.</span></h2>
+                            <!-- <p class="d_block fs_18 mb_45">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br />deserunt mollit anim id est laborum.</p> -->
                             <div class="btn-box clearfix">
                                 <a href="index.html" class="theme-btn theme-btn-two"><span data-text="Get Started">Get Started</span></a>
                             </div>
@@ -510,8 +510,8 @@
                     <div class="image-layer p_absolute" style="background-image:url(assets/images/banner/banner-3.jpg)"></div>
                     <div class="auto-container">
                         <div class="content-box p_relative d_block z_5">
-                            <h2 class="p_relative d_iblock fw_bold fs_80 lh_70 mb_25"><span class="slider-text-anim">Make Your Business with</span><br /> <span class="slider-text-anim">Unique Ideas.</span></h2>
-                            <p class="d_block fs_18 mb_45">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br />deserunt mollit anim id est laborum.</p>
+                            <h2 class="p_relative d_iblock fw_bold fs_80 lh_70 mb_25"><span class="slider-text-anim">Where technology meets innovation,</span><br /> <span class="slider-text-anim">opportunities abound.</span></h2>
+                            <!-- <p class="d_block fs_18 mb_45">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br />deserunt mollit anim id est laborum.</p> -->
                             <div class="btn-box clearfix">
                                 <a href="index.html" class="theme-btn theme-btn-two"><span data-text="Get Started">Get Started</span></a>
                             </div>
@@ -629,13 +629,13 @@
 
                                     </div>
                                     <div class="text p_relative d_block mb_25 wow fadeInUp" data-wow-duration="1500ms">
-                                        <p>Lorem ipsum dolor sit amet consectur adipiscing elit sed eiusmod ex tempor incididunt labore dolore magna aliquaenim ad minim veniam quis nostrud exercitation laboris.</p>
+                                        <p> Our innovative software solutions are designed to streamline processes, maximize efficiency, and drive growth. With a focus on cutting-edge technology and user-centric design, we deliver customizable solutions tailored to your unique needs.</p>
                                     </div>
                                     <ul class="list-style-one clearfix p_relative d_block mb_30 wow fadeInUp" data-wow-duration="1500ms">
                                         <li class="p_relative d_block fs_16 lh_25 fw_sbold pull-left pl_35 mb_13">Clients Focused</li>
                                         <li class="p_relative d_block fs_16 lh_25 fw_sbold pull-left pl_35 mb_13">Targeting & Positioning</li>
-                                        <li class="p_relative d_block fs_16 lh_25 fw_sbold pull-left pl_35 mb_13">We Can Save You Money</li>
-                                        <li class="p_relative d_block fs_16 lh_25 fw_sbold pull-left pl_35 mb_13">Tax Advantages</li>
+                                        <!-- <li class="p_relative d_block fs_16 lh_25 fw_sbold pull-left pl_35 mb_13">We Can Save You Money</li> -->
+                                        <li class="p_relative d_block fs_16 lh_25 fw_sbold pull-left pl_35 mb_13">User-Friendly Interface</li>
                                         <li class="p_relative d_block fs_16 lh_25 fw_sbold pull-left pl_35">Unique Ideas & Solution</li>
                                     </ul>
                                     <div class="btn-box wow fadeInUp" data-wow-duration="1500ms">
@@ -663,7 +663,7 @@
                 <div class="sec-title p_relative d_block mb_50 text-center">
                     <span class="sub-title p_relative d_iblock fs_15 fw_medium g_color mb_19">SERVICES</span>
                     <h2 class="p_relative d_block fs_40 fw_bold mb_30">Great Business Solutions <br />System</h2>
-                    <p class="d_block fs_18">Amet consectur adipiscing elit sed eiusmod ex tempor incididunt <br />labore dolore magna aliquaenim ad minim veniam.</p>
+                    <!-- <p class="d_block fs_18">Amet consectur adipiscing elit sed eiusmod ex tempor incididunt <br />labore dolore magna aliquaenim ad minim veniam.</p> -->
                 </div>
                 <div class="row clearfix">
                     <div class="col-lg-3 col-md-6 col-sm-12 service-block">
@@ -674,11 +674,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-2.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Strategic Consulting Services</a></h4>
-                                <p class="p_relative d_block mb_20">Lorem ipsum dolor sit elit consectetur sed eiusmod tempor labore.</p>
-                                <div class="link">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Custom Software Development</a></h4>
+                                <p class="p_relative d_block mb_20">Tailored solutions designed to meet your specific business needs, whether it's a web application, mobile app, or enterprise software.</p>
+                                <!-- <div class="link">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 lh_25 fw_sbold">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -690,11 +690,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-3.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Best Financial Advice</a></h4>
-                                <p class="p_relative d_block mb_20">Lorem ipsum dolor sit elit consectetur sed eiusmod tempor labore.</p>
-                                <div class="link">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Software Integration</a></h4>
+                                <p class="p_relative d_block mb_20">Seamlessly integrate disparate systems and applications to streamline processes and improve efficiency..</p>
+                                <!-- <div class="link">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 lh_25 fw_sbold">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -706,11 +706,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-4.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Investment & Management</a></h4>
-                                <p class="p_relative d_block mb_20">Lorem ipsum dolor sit elit consectetur sed eiusmod tempor labore.</p>
-                                <div class="link">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Mobile Application Development</a></h4>
+                                <p class="p_relative d_block mb_20">Create engaging mobile experiences for iOS and Android platforms with custom mobile app development services.</p>
+                                <!-- <div class="link">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 lh_25 fw_sbold">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -722,11 +722,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-5.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Corporate Clients & Services</a></h4>
-                                <p class="p_relative d_block mb_20">Lorem ipsum dolor sit elit consectetur sed eiusmod tempor labore.</p>
-                                <div class="link">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_20"><a href="service-details.html">Quality Assurance and Testing</a></h4>
+                                <p class="p_relative d_block mb_20">Guarantee the reliability and performance of your software with thorough testing and quality assurance services, including automated testing, regression testing, and performance testing.                                </p>
+                                <!-- <div class="link">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 lh_25 fw_sbold">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
