--- a/public/about-2.html
+++ b/public/about-2.html
@@ -468,7 +468,7 @@
                     <h4>Contact Info</h4>
                     <ul>
                         <li>thoothukudi</li>
-                        <li><a href="tel:+8801682648101">+88 01682648101</a></li>
+                        <li><a href="tel:+8801682648101">+8333</a></li>
                         <li><a href="mailto:info@example.com">info@example.com</a></li>
                     </ul>
                 </div>
