--- a/public/index.html
+++ b/public/index.html
@@ -1051,8 +1051,8 @@
                                 </div>
                                 <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
                                     <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-2.png" alt=""></figure>
-                                    <h4 class="d_block fs_20 lh_30 mb_2">Nicolas Lawson</h4>
-                                    <span class="designation p_relative d_block fs_16 lh_20">Designer</span>
+                                    <h4 class="d_block fs_20 lh_30 mb_2">Stephen</h4>
+                                    <span class="designation p_relative d_block fs_16 lh_20">Devops</span>
                                 </div>
                             </div>
                         </div>
@@ -1070,8 +1070,8 @@
                                 </div>
                                 <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
                                     <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-3.png" alt=""></figure>
-                                    <h4 class="d_block fs_20 lh_30 mb_2">Keanu Reeves</h4>
-                                    <span class="designation p_relative d_block fs_16 lh_20">Designer</span>
+                                    <h4 class="d_block fs_20 lh_30 mb_2">Belix</h4>
+                                    <span class="designation p_relative d_block fs_16 lh_20">Architech</span>
                                 </div>
                             </div>
                         </div>
@@ -1089,7 +1089,7 @@
                                 </div>
                                 <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
                                     <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-1.png" alt=""></figure>
-                                    <h4 class="d_block fs_20 lh_30 mb_2">Kevin Spacey</h4>
+                                    <h4 class="d_block fs_20 lh_30 mb_2">Sankar</h4>
                                     <span class="designation p_relative d_block fs_16 lh_20">Designer</span>
                                 </div>
                             </div>
@@ -1109,8 +1109,8 @@
                                 </div>
                                 <div class="author p_relative d_block pl_90 pt_7 pb_11 ml_20">
                                     <figure class="thumb-box p_absolute l_0 t_0 w_70 h_70 b_radius_50"><img src="assets/images/resource/testimonial-2.png" alt=""></figure>
-                                    <h4 class="d_block fs_20 lh_30 mb_2">Nicolas Lawson</h4>
-                                    <span class="designation p_relative d_block fs_16 lh_20">Designer</span>
+                                    <h4 class="d_block fs_20 lh_30 mb_2">Ganesh</h4>
+                                    <span class="designation p_relative d_block fs_16 lh_20">Fullstack Developer</span>
                                 </div>
                             </div>
                         </div>
