--- a/public/service.html
+++ b/public/service.html
@@ -160,41 +160,41 @@
                                 <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                     <ul class="navigation clearfix home-menu">
                                         <li class="dropdown"><a href="index.html">Home</a>
-                                            <ul>
-                                                <li><a href="index.html">Corporate Business</a></li>
+                                            <!-- <ul> -->
+                                                <!-- <li><a href="index.html">Corporate Business</a></li> -->
                                                 <!-- <li><a href="index-2.html">Consulting</a></li>
                                                 <li><a href="index-3.html">Finance</a></li>
                                                 <li><a href="index-4.html">Law Firm</a></li>
                                                 <li><a href="index-5.html">Visa Consulting</a></li> -->
-                                                <li><a href="index-6.html">Digital Agency</a></li>
+                                                <!-- <li><a href="index-6.html">Digital Agency</a></li> -->
                                                 <!-- <li><a href="index-7.html">Data Hosting</a></li> -->
                                                 <!-- <li><a href="index-8.html">App Landing</a></li> -->
-                                            </ul>
+                                            <!-- </ul> -->
                                         </li>
-                                        <li class="dropdown"><a href="about.html">About</a>
-                                            <div class="megamenu">
+                                        <li class="dropdown"><a href="about-2.html">About</a>
+                                            <!-- <div class="megamenu">
                                                 <div class="row clearfix">
-                                                    <div class="col-lg-3 column">
+                                                    - <div class="col-lg-3 column">
                                                         <ul>
                                                             <li>
                                                                 <h6>About Pages</h6>
-                                                            </li>
-                                                            <!-- <li><a href="about.html">About Classic</a></li> -->
-                                                            <li><a href="about-2.html">About Creative</a></li>
-                                                            <!-- <li><a href="about-3.html">About Modern</a></li>
+                                                            </li> 
+                                                             <li><a href="about.html">About Classic</a></li> 
+                                                             <li><a href="about-2.html">About Creative</a></li> 
+                                                             <li><a href="about-3.html">About Modern</a></li>
                                                             <li><a href="about-4.html">About Simple</a></li>
-                                                            <li><a href="about-5.html">About Minimal</a></li> -->
-                                                            <!-- <li>
+                                                            <li><a href="about-5.html">About Minimal</a></li> 
+                                                            <li>
                                                                 <h6>Testimonial Pages</h6>
                                                             </li>
                                                             <li><a href="testimonial-1.html">Testimonial Page 1</a></li>
                                                             <li><a href="testimonial-2.html">Testimonial Page 2</a></li>
                                                             <li><a href="testimonial-3.html">Testimonial Page 3</a></li>
                                                             <li><a href="testimonial-4.html">Testimonial Page 4</a></li>
-                                                            <li><a href="testimonial-5.html">Testimonial Page 5</a></li> -->
-                                                        </ul>
-                                                    </div>
-                                                    <!-- <div class="col-lg-3 column">
+                                                            <li><a href="testimonial-5.html">Testimonial Page 5</a></li> 
+                                                         </ul>
+                                                    </div> 
+                                                     <div class="col-lg-3 column">
                                                         <ul>
                                                             <li>
                                                                 <h6>Service Pages</h6>
@@ -216,9 +216,9 @@
                                                             <li><a href="faq-2.html"fa">FAQ 2</a></li>
                                                             <li><a href="faq-3.html">FAQ 3</a></li> 
                                                         </ul>
-                                                    </div> -->
+                                                    </div>
                                                     <div class="col-lg-3 column">
-                                                        <!-- <ul>
+                                                         <ul>
                                                             <li>
                                                                 <h6>Team Pages</h6>
                                                             </li>
@@ -239,9 +239,9 @@
                                                             <li><a href="registration.html">Registration</a></li>
                                                             <li><a href="error.html">404 Error</a></li>
                                                             <li><a href="coming-soon.html">Coming Soon</a></li>
-                                                        </ul> -->
+                                                        </ul>
                                                     </div>
-                                                    <!-- <div class="col-lg-3 column">
+                                                    <div class="col-lg-3 column">
                                                         <ul>
                                                             <li>
                                                                 <h6>Pricing Table</h6>
@@ -260,30 +260,30 @@
                                                             <li><a href="contact-4.html">Contact Page 4</a></li>
                                                             <li><a href="contact-5.html">Contact Page 5</a></li>
                                                         </ul>
-                                                    </div> -->
+                                                    </div> 
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </li>
                                         
-                                        <li class="dropdown"><a href="index.html">Project</a>
+                                        <!-- <li class="dropdown"><a href="index.html">Project</a>
                                             <ul>
                                                 <li><a href="project.html">Project Style 1</a></li>
-                                                <!-- <li><a href="project-2.html">Project Style 2</a></li>
+                                                 <li><a href="project-2.html">Project Style 2</a></li>
                                                 <li><a href="project-3.html">Project Style 3</a></li>
                                                 <li><a href="project-4.html">Project Style 4</a></li>
                                                 <li><a href="project-5.html">Project Style 5</a></li>
-                                                <li><a href="project-6.html">Project Style 6</a></li> -->
+                                                <li><a href="project-6.html">Project Style 6</a></li> 
                                                 <li class="dropdown"><a href="index.html">Project Details</a>
                                                     <ul>
                                                         <li><a href="project-details.html">Project Details 1</a></li>
-                                                        <!-- <li><a href="project-details-2.html">Project Details 2</a></li>
+                                                         <li><a href="project-details-2.html">Project Details 2</a></li>
                                                         <li><a href="project-details-3.html">Project Details 3</a></li>
                                                         <li><a href="project-details-4.html">Project Details 4</a></li>
-                                                        <li><a href="project-details-5.html">Project Details 5</a></li> -->
+                                                        <li><a href="project-details-5.html">Project Details 5</a></li> 
                                                     </ul>
                                                 </li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="service.html">Service</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                         <!-- <li class="dropdown"><a href="index.html">Shop</a>
