--- a/public/about-2.html
+++ b/public/about-2.html
@@ -85,7 +85,7 @@
         <div id="search-popup" class="search-popup">
             <div class="popup-inner">
                 <div class="upper-box clearfix">
-                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/zenogenz-logo-name.png" alt=""></a></figure>
+                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
                     <div class="close-search pull-right"><span class="icon-179"></span></div>
                 </div>
                 <div class="overlay-layer"></div>
@@ -117,7 +117,7 @@
                         <div class="sidebar-info-contents">
                             <div class="content-inner">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/images/zenogenz-logo-name.png" alt="" /></a>
+                                    <a href="index.html"><img src="assets/images/zeno-new.png" alt="" /></a>
                                 </div>
                                 <div class="text-box">
                                     <h4>About ZENOGENZ</h4>
@@ -154,7 +154,7 @@
             <div class="auto-container">
                 <div class="outer-box">
                     <div class="logo-box" >
-                        <figure class="logo" ><a href="index.html"><img src="assets/images/zenogenz-logo-name.png" alt="" width="350" height="100"></a></figure>
+                        <figure class="logo" ><a href="index.html"><img src="assets/images/zeno-new.png" alt="" width="350" height="100"></a></figure>
                     </div>
                     <div class="menu-area clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -521,7 +521,7 @@
                                 <div class="text p_relative d_block mb_45">
                                     <p class="fs_17 font_family_poppins lh_28">We combine technical expertise with a creative approach to deliver digital solutions that not only meet but exceed your expectations. Our team is committed to your success, offering personalized service and transparent communication from start to finish.</p>
                                 </div>
-                                <div class="inner-box">
+                                <!-- <div class="inner-box">
                                     <div class="row clearfix">
                                         <div class="col-lg-6 col-md-6 col-sm-12 single-column">
                                             <div class="single-item">
@@ -544,7 +544,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -565,7 +565,7 @@
 
 
         <!-- project-three -->
-        <section class="project-three about-page-2 p_relative">
+        <!-- <section class="project-three about-page-2 p_relative">
             <div class="shape-layer">
                 <div class="shape-1 p_absolute rotate-me" style="background-image: url(assets/images/shape/shape-176.png);"></div>
                 <div class="shape-2 p_absolute rotate-me" style="background-image: url(assets/images/shape/shape-176.png);"></div>
@@ -614,7 +614,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- project-three end -->
 
 
@@ -968,8 +968,8 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="info-list clearfix">
-                                        <li>Flat 20, Reynolds Neck, North Helenaville, FV77 8WS</li>
-                                        <li><a href="tel:23055873407">+2(305) 587-3407</a></li>
+                                        <li>thoothukudi</li>
+                                        <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
                                         <li><a href="mailto:sample@example.com">sample@example.com</a></li>
                                     </ul>
                                 </div>
