--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
         <div id="search-popup" class="search-popup">
             <div class="popup-inner">
                 <div class="upper-box clearfix">
-                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/zenogenz-logo-name.png" alt=""></a></figure>
+                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
                     <div class="close-search pull-right"><span class="icon-179"></span></div>
                 </div>
                 <div class="overlay-layer"></div>
@@ -128,7 +128,7 @@
                                 </li>
                                 <li class="p_relative d_iblock float_left mr_60 lh_55 pl_25 fs_16">
                                     <i class="icon-2"></i>
-                                    <p>Call: <a href="tel:123045615523">+1 (230)- 456-155-23</a></p>
+                                    <p>Call: <a href="tel:123045615523">+91-9444781055</a></p>
                                 </li>
                                 <li class="p_relative d_iblock float_left lh_55 pl_25 fs_16">
                                     <i class="icon-3"></i>
@@ -1595,7 +1595,7 @@
                                 <div class="widget-content">
                                     <ul class="info-list clearfix">
                                         <li>Flat 20, Reynolds Neck, North Helenaville, FV77 8WS</li>
-                                        <li><a href="tel:23055873407">+2(305) 587-3407</a></li>
+                                        <li><a href="tel:+919444781055">++91-9444-7810-55</a></li>
                                         <li><a href="mailto:sample@example.com">sample@example.com</a></li>
                                     </ul>
                                 </div>
