--- a/public/project-details.html
+++ b/public/project-details.html
@@ -624,7 +624,7 @@
                                 <div class="widget-content">
                                     <ul class="info-list clearfix">
                                         <li>Flat 20, Reynolds Neck, North Helenaville, FV77 8WS</li>
-                                        <li><a href="tel:23055873407">+2(305) 587-3407</a></li>
+                                        <li><a href="tel:+919444781055">++91-9444-7810-55</a></li>
                                         <li><a href="mailto:sample@example.com">sample@example.com</a></li>
                                     </ul>
                                 </div>
