--- a/public/about-2.html
+++ b/public/about-2.html
@@ -815,7 +815,7 @@
 
 
         <!-- team-nine -->
-        <section class="team-nine p_relative sec-pad">
+        <!-- <section class="team-nine p_relative sec-pad">
             <div class="auto-container">
                 <div class="sec-title-12 p_relative d_block mb_50 centred">
                     <h5 class="d_block fs_17 lh_26 fw_sbold font_family_inter uppercase mb_19">Our Experts</h5><br />
@@ -878,7 +878,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- team-nine end -->
 
 
@@ -921,7 +921,7 @@
                     <div class="row clearfix">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget about-widget">
-                                <figure class="footer-logo p_relative d_block mb_35"><a href="index-3.html"><img src="assets/images/footer-logo-4.png" alt=""></a></figure>
+                                <figure class="footer-logo p_relative d_block mb_35"><a href="index-3.html"><img src="assets/images/z-blak-logo.png" alt=""></a></figure>
                                 <div class="text">
                                     <p>Lorem ipsum dolor amet consecto adi pisicing elit sed eiusm tempor incididunt labore dolore magna aliqua enim ad minim.</p>
                                 </div>
