--- a/public/contact.html
+++ b/public/contact.html
@@ -147,7 +147,7 @@
                 <div class="auto-container">
                     <div class="outer-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                            <figure class="logo"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <!--Mobile Navigation Toggler-->
@@ -538,7 +538,7 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-135.png" alt=""></div>
                                 </div>
                                 <h4 class="d_block fs_20 lh_30 fw_sbold mb_7">Contact Us</h4>
-                                <p class="font_family_poppins"><a href="tel:11165458856">+(111)65-458-856</a><br /><a href="tel:11165458856">+(111)65-458-856</a></p>
+                                <p class="font_family_poppins"><a href="tel:11165458856">+91 9444781055</a><br /><a href="tel:11165458856">+91 9444781055</a></p>
                             </div>
                         </div>
                     </div>
