--- a/public/project-details.html
+++ b/public/project-details.html
@@ -76,7 +76,7 @@
         <div id="search-popup" class="search-popup">
             <div class="popup-inner">
                 <div class="upper-box clearfix">
-                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
                     <div class="close-search pull-right"><span class="icon-179"></span></div>
                 </div>
                 <div class="overlay-layer"></div>
@@ -147,7 +147,7 @@
                 <div class="auto-container">
                     <div class="outer-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                            <figure class="logo"><a href="index.html"><img src="" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <!--Mobile Navigation Toggler-->
