--- a/public/contact.html
+++ b/public/contact.html
@@ -76,7 +76,7 @@
         <div id="search-popup" class="search-popup">
             <div class="popup-inner">
                 <div class="upper-box clearfix">
-                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/logo-8.png" alt=""></a></figure>
+                    <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
                     <div class="close-search pull-right"><span class="icon-179"></span></div>
                 </div>
                 <div class="overlay-layer"></div>
@@ -108,7 +108,7 @@
                         <div class="sidebar-info-contents">
                             <div class="content-inner">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/images/logo-8.png" alt="" /></a>
+                                    <a href="index.html"><img src="assets/images/zeno-new.png" alt="" /></a>
                                 </div>
                                 <div class="text-box">
                                     <h4>About Atrix</h4>
@@ -147,7 +147,7 @@
                 <div class="auto-container">
                     <div class="outer-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
+                            <figure class="logo"><a href="index.html"><img src="assets/images/z-blak-logo.png" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <!--Mobile Navigation Toggler-->
@@ -427,7 +427,7 @@
                 <div class="outer-container">
                     <div class="outer-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/logo-8.png" alt=""></a></figure>
+                            <figure class="logo"><a href="index.html"><img src="assets/images/ze-min.jpeg" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <nav class="main-menu clearfix">
@@ -486,11 +486,11 @@
             <div class="auto-container">
                 <div class="content-box">
                     <h1 class="d_block fs_60 lh_70 fw_bold mb_10">Contact Us</h1>
-                    <ul class="bread-crumb p_relative d_block mb_8 clearfix">
+                    <!-- <ul class="bread-crumb p_relative d_block mb_8 clearfix">
                         <li class="p_relative d_iblock fs_16 lh_25 fw_sbold font_family_inter mr_20"><a href="index.html">Home</a></li>
                         <li class="p_relative d_iblock fs_16 lh_25 fw_sbold font_family_inter mr_20">Pages</li>
                         <li class="current p_relative d_iblock fs_16 lh_25 fw_sbold font_family_inter">Contact Us 1</li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </section>
@@ -503,7 +503,7 @@
             <div class="auto-container">
                 <div class="sec-title p_relative d_block mb_50">
                     <h5 class="d_block fs_17 lh_20 fw_sbold uppercase mb_15">Get In Touch</h5>
-                    <h2 class="d_block fs_40 fw_bold">Have a Project in Mind? <br/>Let’s Contact</h2>
+                    <!-- <h2 class="d_block fs_40 fw_bold">Have a Project in Mind? <br/>Let’s Contact</h2> -->
                 </div>
                 <div class="row clearfix">
                     <div class="col-lg-4 col-md-6 col-sm-12 info-column">
@@ -514,7 +514,7 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-133.png" alt=""></div>
                                 </div>
                                 <h4 class="d_block fs_20 lh_30 fw_sbold mb_7">Office Location</h4>
-                                <p class="font_family_poppins">629 12th St, Modesto, CA 95354 United States</p>
+                                <p class="font_family_poppins">thoothukudi</p>
                             </div>
                         </div>
                     </div>
@@ -526,7 +526,8 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-134.png" alt=""></div>
                                 </div>
                                 <h4 class="d_block fs_20 lh_30 fw_sbold mb_7">Company Email</h4>
-                                <p class="font_family_poppins"><a href="mailto:example@gmail.com">example@gmail.com</a><br /><a href="mailto:example@gmail.com">example@gmail.com</a></p>
+                                <p class="font_family_poppins"><a href="mailto:example@gmail.com">zenogenz.com</a><br />
+                                    <!-- <a href="mailto:example@gmail.com">zenogenz.com</a></p> -->
                             </div>
                         </div>
                     </div>
@@ -538,7 +539,8 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-135.png" alt=""></div>
                                 </div>
                                 <h4 class="d_block fs_20 lh_30 fw_sbold mb_7">Contact Us</h4>
-                                <p class="font_family_poppins"><a href="tel:11165458856">+91 9444781055</a><br /><a href="tel:11165458856">+91 9444781055</a></p>
+                                <p class="font_family_poppins"><a href="tel: 9444781055">+91 9444781055</a>
+                                    <!-- <br /><a href="tel:11165458856">+91 9444781055</a></p> -->
                             </div>
                         </div>
                     </div>
@@ -614,7 +616,7 @@
                     <div class="row clearfix">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget about-widget wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <figure class="footer-logo p_relative d_block mb_35"><a href="index-3.html"><img src="assets/images/logo-20.png" alt=""></a></figure>
+                                <figure class="footer-logo p_relative d_block mb_35"><a href="index-3.html"><img src="assets/images/z-blak-logo.png" alt=""></a></figure>
                                 <div class="text">
                                     <p>Lorem ipsum dolor amet consecto adi pisicing elit sed eiusm tempor incididunt labore dolore magna aliqua enim ad minim.</p>
                                 </div>
