--- a/public/about-2.html
+++ b/public/about-2.html
@@ -153,8 +153,8 @@
         <div class="header-lower">
             <div class="auto-container">
                 <div class="outer-box">
-                    <div class="logo-box" >
-                        <figure class="logo" ><a href="index.html"><img src="assets/images/zeno-new.png" alt="" width="350" height="100"></a></figure>
+                    <div class="logo-box">
+                        <figure class="logo"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
                     </div>
                     <div class="menu-area clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -168,17 +168,18 @@
                                 <ul class="navigation clearfix home-menu">
                                     <li class="dropdown"><a href="index.html">Home</a>
                                         <!-- <ul> -->
-                                            <!-- <li><a href="index.html">Software program</a></li> -->
+                                            <!-- <li><a href="index.html">Corporate Business</a></li> -->
                                             <!-- <li><a href="index-2.html">Consulting</a></li>
                                             <li><a href="index-3.html">Finance</a></li>
                                             <li><a href="index-4.html">Law Firm</a></li>
                                             <li><a href="index-5.html">Visa Consulting</a></li> -->
-                                            <!-- <li><a href="index-6.html">Software Development</a></li> -->
+                                            <!-- <li><a href="index-6.html">Digital Agency</a></li> -->
                                             <!-- <li><a href="index-7.html">Data Hosting</a></li> -->
                                             <!-- <li><a href="index-8.html">App Landing</a></li> -->
                                         <!-- </ul> -->
                                     </li>
                                     <li class="dropdown"><a href="about-2.html">About</a>
+                                       
                                             <!-- <div class="megamenu">
                                                 <div class="row clearfix">
                                                     - <div class="col-lg-3 column">
@@ -280,7 +281,7 @@
                                             <li><a href="project-3.html">Project Style 3</a></li>
                                             <li><a href="project-4.html">Project Style 4</a></li>
                                             <li><a href="project-5.html">Project Style 5</a></li>
-                                            <li><a href="project-6.html">Project Style 6</a></li>
+                                            <li><a href="project-6.html">Project Style 6</a></li> 
                                             <li class="dropdown"><a href="index.html">Project Details</a>
                                                 <ul>
                                                     <li><a href="project-details.html">Project Details 1</a></li>
