--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
     <link href="assets/css/elpath.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b3cf81fc55.js" crossorigin="anonymous"></script>
+    
+
 
 </head>
 
