--- a/public/service.html
+++ b/public/service.html
@@ -77,7 +77,7 @@
             <div class="popup-inner">
                 <div class="upper-box clearfix">
                     <figure class="logo-box pull-left"><a href="index.html"><img src="assets/images/zeno-new.png" alt=""></a></figure>
-                    <div class="close-search pull-right"><span class="icon-179"></span></div>
+                    <!-- <div class="close-search pull-right"><span class="icon-179"></span></div> -->
                 </div>
                 <div class="overlay-layer"></div>
                 <div class="auto-container">
@@ -108,7 +108,7 @@
                         <div class="sidebar-info-contents">
                             <div class="content-inner">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/images/zeno-new.png" alt="" /></a>
+                                    <!-- <a href="index.html"><img src="assets/images/zeno-new.png" alt="" /></a> -->
                                 </div>
                                 <div class="text-box">
                                     <h4>About Atrix</h4>
@@ -421,7 +421,7 @@
             </div>
 
             <!--sticky Header-->
-            <div class="sticky-header">
+            <!-- <div class="sticky-header">
                 <div class="outer-container">
                     <div class="outer-box">
                         <div class="logo-box">
@@ -429,7 +429,7 @@
                         </div>
                         <div class="menu-area clearfix">
                             <nav class="main-menu clearfix">
-                                <!--Keep This Empty / Menu will come through Javascript-->
+                                Keep This Empty  Menu will come through Javascript
                             </nav>
                         </div>
                         <div class="nav-right">
@@ -442,7 +442,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </header>
         <!-- main-header end -->
 
