--- a/public/contact.html
+++ b/public/contact.html
@@ -119,7 +119,7 @@
                                     <ul class="info clearfix">
                                         <li><i class="icon-180"></i>629 12th St, Modesto, CA 95354 United States</li>
                                         <li><i class="icon-181"></i><a href="mailto:atrixmain@gmail.com">atrixmain@gmail.com</a></li>
-                                        <li><i class="icon-182"></i><a href="tel:123045615523">+1 (230)-456-155-23</a></li>
+                                        <li><i class="icon-182"></i><a href="tel:9444781055">+91-9444-7810-55</a></li>
                                     </ul>
                                 </div>
                                 <div class="social-inner">
@@ -427,7 +427,7 @@
                 <div class="outer-container">
                     <div class="outer-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/ze-min.jpeg" alt=""></a></figure>
+                            <figure class="logo"><a href="index.html"><img src="assets/images/zeno-142-50.png" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <nav class="main-menu clearfix">
