--- a/public/index.html
+++ b/public/index.html
@@ -428,7 +428,7 @@
                 <div class="auto-container">
                     <div class="outer-box">
                         <div class="logo-box">
-                            <figure class="logo"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                            <figure class="logo"><a href="index.html"><img src="assets/images/zeno-142-50.png" alt=""></a></figure>
                         </div>
                         <div class="menu-area clearfix">
                             <nav class="main-menu clearfix">
@@ -792,7 +792,7 @@
                             <div class="content_block_two">
                                 <div class="content-box p_relative d_block mr_130 z_1">
                                     <div class="sec-title p_relative d_block mb_20">
-                                        <span class="sub-title p_relative d_iblock fs_15 fw_medium g_color mb_19">CHOOSE Atrix</span>
+                                        <span class="sub-title p_relative d_iblock fs_15 fw_medium g_color mb_19">CHOOSE ZenoGenZ</span>
                                         <h2 class="p_relative d_block fs_40 fw_bold mb_0">Few Reasons Why You Should Choose Us</h2>
                                     </div>
                                     <!-- <div class="text p_relative d_block mb_25 wow fadeInUp" data-wow-duration="1500ms">
@@ -1525,7 +1525,7 @@
                 <div class="auto-container">
                     <div class="top-inner clearfix">
                         <figure class="footer-logo pull-left">
-                            <a href="index.html"><img src="assets/images/footer-logo.png" alt=""></a>
+                            <a href="index.html"><img src="assets/images/z-blak-logo1.png" alt=""></a>
                         </figure>
                         <ul class="social-links pull-right clearfix">
                             <li><a href="index.html"><i class="fab fa-facebook-f"></i></a></li>
